tests/error/array_errors/use_after_subscript.err
Error: Copy violation (at $FILE:18:15)
   | 
16 | @guppy(module)
17 | def main(qs: array[qubit, 42] @owned) -> array[qubit, 42]:
18 |     return foo(qs[0], qs)
   |                ^^^^^ Variable `qs` with non-copyable type `array[qubit, 42]`
   |                      cannot be borrowed ...
   | 
18 |     return foo(qs[0], qs)
   |                       -- since it was already consumed here

Guppy compilation failed due to 1 previous error
